fixed method for obtaining posts approved